fix: font prefetching and nav links spacing fix

--- a/src/styles/components/nav.scss
+++ b/src/styles/components/nav.scss
@@ -2,11 +2,12 @@ nav {
   display: flex;
   align-items: center;
   justify-content: center;
-  gap: 1.25rem;
+  gap: 2.25rem;
   margin: 2.5rem 0 0.5rem;
 
   @media (max-width: 550px) {
     margin-top: 1.5rem;
+    gap: 1.25rem;
   }
 
   a {
